[Graal] java/lang/invoke/CallSiteTest.java intermittently fails with "Failed dependency of type call_site_target_value" when running with Graal as JIT

XMLWordPrintable

    • b36

        java/lang/invoke/CallSiteTest.java intermittently fails with

        hread[JVMCI CompilerThread7,9,system]: Compilation of test.java.lang.invoke.CallSiteTest.runVolatileCallSite() failed: java.lang.AssertionError: dependencies invalid Code installation failed: dependencies invalid
        Failed dependency of type call_site_target_value
          object = a 'java/lang/invoke/VolatileCallSite'{0x00000000e6abe728}
          object = a 'java/lang/invoke/DirectMethodHandle'{0x00000000e6abf240}
          witness = java.lang.invoke.VolatileCallSite

                at jdk.internal.vm.ci/jdk.vm.ci.hotspot.HotSpotCodeCacheProvider.installCode(HotSpotCodeCacheProvider.java:129)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.core.target.Backend.createInstalledCode(Backend.java:212)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.hotspot.CompilationTask.installMethod(CompilationTask.java:357)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.hotspot.CompilationTask.access$500(CompilationTask.java:63)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.hotspot.CompilationTask$HotSpotCompilationWrapper.performCompilation(CompilationTask.java:179)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.hotspot.CompilationTask$HotSpotCompilationWrapper.performCompilation(CompilationTask.java:94)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.core.CompilationWrapper.run(CompilationWrapper.java:165)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.hotspot.CompilationTask.runCompilation(CompilationTask.java:317)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.hotspot.HotSpotGraalCompiler.compileMethod(HotSpotGraalCompiler.java:142)
                at jdk.internal.vm.compiler@10-internal/org.graalvm.compiler.hotspot.HotSpotGraalCompiler.compileMethod(HotSpotGraalCompiler.java:108)
                at jdk.internal.vm.ci/jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.compileMethod(HotSpotJVMCIRuntime.java:437)
        To disable compilation failure notifications, set CompilationFailureAction to Silent (e.g., -Dgraal.CompilationFailureAction=Silent).
        To print a message for a compilation failure without retrying the compilation, set CompilationFailureAction to Print (e.g., -Dgraal.CompilationFailureAction=Print).
        Retrying compilation of test.java.lang.invoke.CallSiteTest.runVolatileCallSite()

        Exiting VM after retry compilation of test.java.lang.invoke.CallSiteTest.runVolatileCallSite()

        when running with Graal as JIT compiler.

              Assignee:
              Tom Rodriguez
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: